<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nizural.csensebe.tictactoe.OnePlayerGame">

    <TextView
        android:id="@+id/one_player_game_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_player_text_view_title"
        style="?android:listSeparatorTextViewStyle"/>
    <LinearLayout
        android:layout_below="@id/one_player_game_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/one_player_score_text_size"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_player_text_view_player_score_label"/>
            <TextView
                android:textSize="@dimen/one_player_score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one_player_game_text_view_player_score"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/one_player_score_text_size"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_player_text_view_program_score_label"/>
            <TextView
                android:textSize="@dimen/one_player_score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one_player_game_text_view_programm_score"/>
        </LinearLayout>
    </LinearLayout>
    <TableLayout
        android:id="@+id/one_player_game_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:id="@+id/one_player_game_board_row_1">
            <Button
                android:id="@+id/one_player_game_board_button_1"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_2"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_3"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
        </TableRow>
        <TableRow
            android:id="@+id/one_player_game_board_row_2">
            <Button
                android:id="@+id/one_player_game_board_button_4"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_5"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_6"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
        </TableRow>
        <TableRow
            android:id="@+id/one_player_game_board_row_3">
            <Button
                android:id="@+id/one_player_game_board_button_7"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_8"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
            <Button
                android:id="@+id/one_player_game_board_button_9"
                android:layout_width="@dimen/game_grid_button_size"
                android:layout_height="@dimen/game_grid_button_size"
                android:onClick="playerTurn"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

       <Button
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/one_player_button_back"
           android:onClick="back"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one_player_button_replay"
            android:onClick="newGame"/>
    </LinearLayout>
</RelativeLayout>
